2007-07-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added some non standard flags to the maildir support

2007-07-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixes for the new headers after a transfer of messages happened
	* Fixed for new headers after adding a message happened

2007-07-05  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
	The asynchronous operations now always call the callbacks in an idle
	if the GMainLoop is available, even if the thread could not be
	started.
	Refactored the code that invokes the user callbacks.
	Changed the priority of the idles, now the status callbacks have
	higher priority than the function callbacks.
	
	* libtinymail-camel/tny-camel-store-account.c:
	The asynchronous operations now always call the callbacks in an idle
	if the GMainLoop is available, even if the thread could not be
	started.

2007-07-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Renamed removed to expunged in TnyFolderChange

	* This was a major API change

2007-07-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Dealing with the first connection status of the device instance
	* Several race conditions when rapidly connecting and disconnecting

2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_dummy_connection_check): Changed the check for a NULL iap
	(though it should have worked already) to ensure that the signal 
	is always emitted at initialization.
	(tny_maemo_conic_device_force_online): Do not just return if we 
	are in scratchbox. Nothing here is libconic-specific. This 
	makes is_online() return the correct value after calling force_online().

2007-07-04  Johannes Schmid <johannes.schmid@openismus.com>

	* libtinymail/tny-merge-folder.c:
	Added API doc

2007-07-04  Johannes Schmid <johannes.schmid@openismus.com>

	* libtinymail/tny-merge-folder.[ch]:
	Added tny_merge_folder_set_folder_type() API to be able