@@ -73,7 +73,8 @@ enum _TnyHeaderPriorityFlags
 {
 	TNY_HEADER_FLAG_HIGH_PRIORITY = 1<<9|1<<10,
 	TNY_HEADER_FLAG_NORMAL_PRIORITY = 0<<9|0<<10,
-	TNY_HEADER_FLAG_LOW_PRIORITY = 0<<9|1<<10
+	TNY_HEADER_FLAG_LOW_PRIORITY = 0<<9|1<<10,
+	TNY_HEADER_FLAG_SUSPENDED_PRIORITY = 1<<9|0<<10
 };
 
 struct _TnyHeaderIface
