@@ -1,6 +1,8 @@
 2007-07-06  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Added some non standard flags to the maildir support
+	* Support for suspended items in sendqueues
+	* Fixed an API glitch in TnyFolderChange
 
 2007-07-05  Philip Van Hoof  <pvanhoof@gnome.org>
 
